完成登录注册以及部分页面

--- a/frontChat/index.html
+++ b/frontChat/index.html
@@ -7,7 +7,6 @@
 		<script src="js/mui.min.js"></script>
 		<link href="css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="icon/iconfont.css" />
-		<link href="./icon/iconfont.css" rel="stylesheet" />
 		<script type="text/javascript" charset="utf-8">
 			mui.init();
 			// 原生加载完成之后
@@ -18,8 +17,10 @@
 		</script>
 	</head>
 	<body>
-		<header class="mui-bar mui-bar-nav title">
-			<h1 class="mui-title title-color">微信</h1>
+		<header class="mui-bar mui-bar-nav title" >
+			<h1 class="mui-title title-color" style="position: absolute; left: -69%;">微信(7)</h1>
+			<h1 class="mui-title title-color iconfont icon-chazhao" style="position: absolute; left: 75%;"></h1>
+			<h1 class="mui-title title-color iconfont icon-jia" style="position: absolute; left: 85%;right: 0px;"></h1>
 		</header>
 		<nav class="mui-bar mui-bar-tab">
 			<a class="mui-tab-item mui-active " tabindex="0">
@@ -89,8 +90,6 @@
 					}
 				})
 				// 获取当前点击页面
-
-
 			})
 		</script>
 
