部分页面更新

--- a/frontChat/index.html
+++ b/frontChat/index.html
@@ -6,6 +6,7 @@
 		<script src="js/mui.min.js"></script>
 		<script src="./icon/iconfont.js"></script>
 		<script src="./js/index.js"></script>
+		<script src="./js/store.min.js"></script>
 		<link href="css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="icon/iconfont.css" />
 		<link rel="stylesheet" href="css/index.css" />
