--- a/frontChat/login.html
+++ b/frontChat/login.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title></title>
 		<script src="js/mui.min.js"></script>
-
+		<script src="js/app.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/login/util.css">
 		<link rel="stylesheet" type="text/css" href="css/login/main.css">
 		<link rel="stylesheet" type="text/css" href="css/login.css">
@@ -25,7 +24,7 @@
 							<h5>微 信</h5>
 						</span>
 						<span class="login100-form-avatar">
-							<img id="img_login_face" src="img/arrow.jpg" alt="风间影月">
+							<img id="img_login_face" src="images/arrow.jpg" alt="萧遥">
 						</span>
 
 						<div class="wrap-input100 validate-input m-t-85 m-b-35">
